# Reveaal

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-mingw  README.md  ReviewGuide.md  cleanandrun.sh  compiled_component.rs  fed_to_vec_test.txt  test.txt  test2.txt  vec_to_fed.txt  zero_out.txt
.github/workflows/: build.yaml  build_artifacts.yaml  check_format.yaml  ci.yaml  run_tests.yaml  rust.yml
EcdarProtoBuf/: component.proto  objects.proto  query.proto  services.proto
benches/: bench.rs  bench_helper.rs  clock_reduction_bench.rs  reachability_bench.rs  refinement_bench.rs  simulation_bench.rs  threadpool_bench.rs
benches/flamegraph/: flamegraph_profiler.rs  flamegraph_profiler_unix.rs  mod.rs
dbm/: Array.h  CMakeLists.txt  ClockAccessor.h  DBMAlloc.patch  DataAllocator.h  Enumerator.h  Federation.h  H3HashFunction.h  IOQueue.h  MZRan13.h  PriorityQueue.h  SimpleQueue.h  StreamHasher.h  TinyTable.h  Valuation.h  array_t.h  bitptr.h  bitstring.h  c_allocator.h  compute.h  config.h  constraints.h  dbm.h  dbmfederation.h  fed-fed.txt  fed-fed2.txt  fed.h  gen.h  inline_fed.h  intutils.h  itemtables.h  macros.h  malloc.h  mingraph.h  new.h  partition.h  pfed.h  platform.h  pointer.h  priced.h  (+11 more)
dbm/include/: config.h
dbm/include/base/: bitstring.h  intutils.h  platform.h  relation.h
dbm/include/dbm/: Federation.h  constraints.h  dbm.h  dbmfederation.h  fed.h  inline_fed.h  mingraph.h
dbm/include/debug/: c_allocator.h  utils.h
dbm/include/hash/: compute.h
ecdar_test_projects/Multiple_feature_tests/Refinement_with_composition/: Queries.json  SystemDeclarations.json
ecdar_test_projects/Multiple_feature_tests/Refinement_with_extrapolation/: GlobalDeclarations.json
ecdar_test_projects/Multiple_feature_tests/Refinement_with_input_enabledness/: SystemDeclarations.json
ecdar_test_projects/Multiple_feature_tests/Refinement_with_quotient/: Queries.json  SystemDeclarations.json
ecdar_test_projects/Single_feature_tests/Consistency_check/: SystemDeclarations.json
ecdar_test_projects/Single_feature_tests/Determinism/: SystemDeclarations.json
ecdar_test_projects/Single_feature_tests/Interval_consistency/: Queries.json
ecdar_test_projects/Single_feature_tests/Invariant/: GlobalDeclarations.json  SystemDeclarations.json
ecdar_test_projects/Single_feature_tests/Invariant_2/: Queries.json  SystemDeclarations.json
ecdar_test_projects/Single_feature_tests/Partial_input_enabledness/: Queries.json  SystemDeclarations.json
ecdar_test_projects/Single_feature_tests/Refine_Self/: Queries.json  SystemDeclarations.json
ecdar_test_projects/Single_feature_tests/Should_fail_Refinement/: GlobalDeclarations.json  SystemDeclarations.json
ecdar_test_projects/Single_feature_tests/Signature_check/: SystemDeclarations.json
ecdar_test_projects/Single_feature_tests/input_enabledness/: GlobalDeclarations.json  SystemDeclarations.json
mingw/: copy-output.sh  user-config.jam
protos/: test.proto
samples/json/AG/: GlobalDeclarations.json  Queries.json  SystemDeclarations.json
samples/json/AGTest/: GlobalDeclarations.json  Queries.json  (+1 more)
samples/xml/: ConsTests.q  ConsTests.xml  ImplTests.q  ImplTests.xml  conjun.q  conjun.xml  counter_conjun.xml  delayRefinement.q  delayRefinement.xml  extrapolation_test.xml  loop.xml  misc_test.xml
src/: build.rs  cli.rs  cli.yml  lib.rs  local_consistency.rs  logging.rs  main.rs  network.rs  server.rs
src/DBMLib/: dbm.rs  lib.rs  lib_dbm.rs  lib_stub.rs  mod.rs
src/DataReader/: component_loader.rs  json_reader.rs  json_writer.rs  mod.rs  parse_edge.rs  parse_invariant.rs  parse_queries.rs  parse_utils.rs  proto_reader.rs  proto_writer.rs  serialization.rs  xml_parser.rs  xml_writer.rs
src/DataTypes/: mod.rs  statepair_list.rs
src/EdgeEval/: constraint_applyer.rs  mod.rs  updater.rs
src/Macros/: errors.rs
src/ModelObjects/: component.rs  component_view.rs  edge.rs  expression_representation.rs  location.rs  max_bounds.rs  mod.rs  parse_edge.rs  parse_invariant.rs  parse_queries.rs  queries.rs  representations.rs  state.rs  statepair.rs  system.rs  system_declarations.rs  transition.rs  xml_parser.rs
src/ProtobufServer/: ecdar_backend.rs  enum_function_return_type.rs  mod.rs  proto_conversions.rs  server.rs  threadpool.rs
src/Refiner/: constraint_applyer.rs  guard_applyer.rs  mod.rs  refine.rs
src/Simulation/: decision.rs  decision_point.rs  graph_layout.rs  mod.rs  transition_decision.rs  transition_decision_point.rs
src/System/: executable_query.rs  extra_actions.rs  extract_state.rs  extract_system_rep.rs  global_consistency.rs  input_enabler.rs  local_consistency.rs  mod.rs  pruning.rs  query_failures.rs  reachability.rs  refine.rs  save_component.rs  specifics.rs
src/TransitionSystems/: common.rs  compiled_component.rs  composition.rs  conjunction.rs  location_id.rs  location_tree.rs  location_tuple.rs  mod.rs  pruned_component.rs  quotient.rs  transition_id.rs  transition_system.rs
src/data_reader/: component_loader.rs  json_reader.rs  json_writer.rs  mod.rs  parse_edge.rs  parse_queries.rs  proto_reader.rs  serialization.rs  xml_parser.rs
src/edbm/: dense.rs  mod.rs  sparse.rs
src/edge_eval/: constraint_applier.rs  mod.rs
src/model_objects/: clock_reduction.rs  component.rs  decision.rs  declarations.rs  edge.rs  location.rs  mod.rs  queries.rs  state.rs  statepair.rs  statepair_list.rs  system_declarations.rs  transition.rs
src/protobuf_server/: ecdar_backend.rs  mod.rs  proto_conversions.rs  server.rs
src/protos/: test.rs
src/simulation/: graph_layout.rs  mod.rs
src/system/: executable_query.rs  extract_state.rs  extract_system_rep.rs  input_enabler.rs  local_consistency.rs  mod.rs  pruning.rs  query_failures.rs  reachability.rs  refine.rs  save_component.rs  specifics.rs  system_recipe.rs
src/tests/: bindings_test.rs  mod.rs  sample.rs  test_quotient.rs
src/transition_systems/: common.rs  compiled_component.rs  compiled_update.rs  composition.rs  conjunction.rs  location_id.rs  location_tree.rs  mod.rs  quotient.rs  transition_id.rs  transition_system.rs
(+404 files in other folders)
