[package]
name = "reveaal"
version = "0.1.0"
build = "src/build.rs"
authors = ["Peter Greve <Pgreve16@student.aau.dk>"]
edition = "2018"

[lib]
name = "reveaal"
path = "src/lib.rs"

[[bin]]
name = "Reveaal"
path = "src/main.rs"

[features]
default = ["logging"]
logging = ["dep:env_logger", "dep:chrono"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "~2.34.0", features = ["yaml"] }
boolean_expression = "0.4.4"
pest = "2.1.3"
pest_derive = "2.1.0"
pkg-config = "~0.3.22"
generic-array = "0.14.4"
lazy_static = "1.4.0"
xml-rs = "0.8.3"
serde-xml-rs = "0.6.0"
elementtree = "1.2.2"
dyn-clone = "1.0"
tonic = "0.8.2"
prost = "0.11.0"
tokio = { version = "1.0", features = ["macros", "rt"] }
colored = "2.0.0"
simple-error = "0.2.3"
force_graph = "0.3.2"
rand = "0.8.5"
futures = "0.3.21"
edbm = { git = "https://github.com/Ecdar/EDBM" }
log = "0.4.17"
env_logger = { version = "0.9.0", optional = true }
chrono = { version = "0.4.22", optional = true }
test-case = "2.2.2"
crossbeam-channel = "0.5.6"
num_cpus = "1.13.1"

# Enable optimizations for EDBM in debug mode, but not for our code:
[profile.dev.package.edbm]
opt-level = 3

[build-dependencies]
tonic-build = "0.8.2"

[dev-dependencies]
pprof = { version = "0.10.1", features = ["flamegraph"] }
criterion = { version = "0.4.0", features = ["async_futures"] }

[[bench]]
name = "bench"
harness = false
