[package]
name = "reveaal"
version = "0.1.0"
build = "src/build.rs"
authors = ["Thomas Lohse", "Sebastian Lund", "Thorulf Neustrup", "Peter Greve"]
edition = "2021"

[lib]
name = "reveaal"
path = "src/lib.rs"

[[bin]]
name = "reveaal"
path = "src/main.rs"

[features]
default = ["logging"]
logging = ["dep:env_logger", "dep:chrono"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.2.1", features = [ "derive" ] }
pest = "2.5.6"
pest_derive = "2.5.6"
xml-rs = "0.8.3"
serde-xml-rs = "0.6.0"
elementtree = "1.2.2"
dyn-clone = "1.0"
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt"] }
colored = "2.0.0"
force_graph = "0.3.2"
rand = "0.8.5"
futures = "0.3.21"
edbm = { git = "https://github.com/Ecdar/EDBM" }
log = "0.4.17"
env_logger = { version = "0.11.2", optional = true }
chrono = { version = "0.4.22", optional = true }
test-case = "3.3.1"
num_cpus = "1.13.1"
lru = "0.12.2"
itertools = "0.12.1"
regex = "1"
rayon = "1.6.1"
lazy_static = "1.4.0"
num = "0.4.1"

# Enable optimizations for EDBM in debug mode, but not for our code:
[profile.dev.package.edbm]
opt-level = 3

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
test-case = "3.3.1"
criterion = { version = "0.5.1", features = ["async_futures"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.13.0", features = ["flamegraph"] }

[[bench]]
name = "refinement_bench"
harness = false

[[bench]]
name = "reachability_bench"
harness = false

[[bench]]
name = "threadpool_bench"
harness = false

[[bench]]
name = "clock_reduction_bench"
harness = false

[[bench]]
name = "simulation_bench"
harness = false
